--- a/bnkaraoke.web/src/index.css
+++ b/bnkaraoke.web/src/index.css
@@ -1,4 +1,8 @@
 /* src\index.css */
+:root {
+  --app-header-height: 0px;
+}
+
 html {
   -webkit-text-size-adjust: 100%;
 }
